# busperf

./: .ci.yml  .gitignore  Cargo.toml  README.md  build.rs  deny.toml  template.html
.github/workflows/: build-and-test.yml  generate-pages.yml  publish.yml
busperf_gui/: Cargo.toml
busperf_gui/src/: egui_visualization.rs  lib.rs  surfer_egui.rs  surfer_integration.rs
busperf_gui/src/surfer_integration/: proto.rs
busperf_web/: Cargo.toml  index.html
busperf_web/src/: app.rs  main.rs
ci/: build.sh  build_deps.sh  cargo_tests.sh  cargo_tests_deps.sh  taxi_tests.sh  taxi_tests_deps.sh  taxi_tests_generate_traces.sh  trunk_build.sh  trunk_build_deps.sh
docs/: README.md  analyzers.md  output.md  plugins.md  yaml.md
docs/source/: analyzers.md  conf.py  index.md  introduction.md  output.md  plugins.md  yaml.md
libbusperf/: Cargo.toml
libbusperf/src/: bus_usage.rs  lib.rs
plugins/python/: AXIFullRdAnalyzerPython.py  AXILiteRdAnalyzerPython.py  AXIRdAnalyzer.py  AXIRdAnalyzerPython.py  PythonReadyValid.py  PythonTest.py  Test2.py
python/: app.py
src/: analyze.rs  analyzer.rs  bus.rs  bus_usage.rs  egui_visualization.rs  lib.rs  main.rs  plugins.rs  show.rs  surfer_integration.rs  text_output.rs
src/analyze/: analyzer.rs  bus.rs  plugins.rs
src/analyze/analyzer/: axi_analyzer.rs  default_analyzer.rs  python_analyzer.rs
src/analyze/bus/: ahb.rs  apb.rs  axi.rs  credit_valid.rs  custom_python.rs
src/analyzer/: axi_analyzer.rs  axi_rd_analyzer.rs  axi_wr_analyzer.rs  default_analyzer.rs  python_analyzer.rs
src/bus/: ahb.rs  axi.rs  credit_valid.rs  custom_python.rs
src/show/: egui_visualization.rs  surfer_integration.rs  text_output.rs
src/surfer_integration/: proto.rs
tests/: dummy_plugins  dump_test.rs  tuttest.rs
tests/taxi_descriptions/: axi_fifo.yaml  axi_intervals_ram.yaml  axi_ram.yaml  axi_ram_python.yaml  axil_ram.yaml  axil_register.yaml
tests/test_dumps/: ahb.vcd  ahb.yaml  apb.vcd  apb.yaml  axi.vcd  clk_rst_if.yaml  credit_valid.vcd  credit_valid.yaml  dump.vcd  dump.yaml  dump_rst_high.yaml  nested_scopes.vcd  nested_scopes.yaml  python_dump.yaml  python_test.yaml  ready_valid_intervals.yaml  test.vcd  test.yaml  test_complex_scope.vcd  test_complex_scope.yaml  test_max_burst_delay.yaml
