[workspace]
resolver = "3"
members = ["", "busperf_web"]

[package]
name = "busperf"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
csv = "1.3.1"
pyo3 = { version = "0.25.1", default-features = false, features = ["auto-initialize", "macros"], optional = true }
tabled = "0.20.0"
wellen = "0.17.1"
yaml-rust2 = "0.10.3"
eframe = "0.32.3"
egui_plot = "0.33.0"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
num = "0.4.3"
bpaf = { version = "0.9.20", features = ["autocomplete"] }
bincode = "2.0.1"
flate2 = { version = "1.1.4", default-features = false, features = ["zlib-rs"] }
blake3 = "1.8.2"
rfd = "0.15.4"
constcat = "0.6.1"
futures = "0.3.31"

[features]
default = ["help-colors", "analyze", "show", "python-plugins"]
help-colors = ["bpaf/bright-color"]
python-plugins = ["dep:pyo3"]
analyze = []
show = []

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"  
log = "0.4.27"
