[workspace]
resolver = "3"
members = ["", "busperf_web", "libbusperf", "busperf_gui"]

[package]
name = "busperf"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
csv = "1.3.1"
pyo3 = { version = "0.25.1", default-features = false, features = ["auto-initialize", "macros"], optional = true }
tabled = { version = "0.20.0", default-features = false, features = ["std"] }
wellen = "0.17.1"
yaml-rust2 = "0.10.3"
busperf_gui = { path = "busperf_gui", features = ["surfer"]}
serde = "1.0.228"
serde_json = "1.0.145"
num = "0.4.3"
bpaf = { version = "0.9.20", features = ["autocomplete"] }
flate2 = "1.1.4"
rfd = "0.15.4"
constcat = "0.6.1"
owo-colors = "4.2.3"
base64 = "0.22.1"
cfg-if = "1.0.4"

[features]
default = ["help-colors", "analyze", "show", "python-plugins", "generate-html"]
help-colors = ["bpaf/bright-color"]
python-plugins = ["dep:pyo3"]
analyze = []
show = []
generate-html = []

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"  
log = "0.4.27"
