[workspace]
resolver = "3"
members = ["busperf_web", "libbusperf", "busperf_gui"]

[package]
name = "busperf"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
csv = "1.3.1"
pyo3 = { version = "0.25.1", default-features = false, features = ["auto-initialize", "macros"], optional = true }
tabled = { version = "0.20.0", default-features = false, features = ["std"] }
wellen = "0.17.1"
yaml-rust2 = "0.10.3"
libbusperf = { path = "libbusperf", features = ["file-hash"] }
busperf_gui = { path = "busperf_gui", features = ["surfer"], optional = true}
bpaf = { version = "0.9.20", features = ["autocomplete"] }
flate2 = "1.1.4"
constcat = "0.6.1"
owo-colors = "4.2.3"
base64 = { version = "0.22.1", optional = true }
cfg-if = "1.0.4"
bincode = "2.0.1"
blake3 = "1.8.2"

[features]
default = ["help-colors", "gui", "python-plugins", "generate-html"]
help-colors = ["bpaf/bright-color"]
python-plugins = ["dep:pyo3"]
gui = ["dep:busperf_gui"]
generate-html = ["dep:base64"]
