[package]
name = "busperf_web"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "2.0.1"
blake3 = "1.8.2"
busperf = { path = "../", default-features = false, features = ["show"]}
eframe = "0.32.3"
flate2 = "1.1.5"
futures = "0.3.31"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
rfd = "0.15.4"
wellen = "0.17.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
wasm-bindgen = "0.2.105"
web-sys = "0.3.70"  
log = "0.4.27"
