[package]
name = "busperf_web"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
busperf_gui = { path = "../busperf_gui", default-features = false }
eframe = { version = "0.32.3", default-features = false, features = ["default_fonts", "glow"] }
rfd = "0.15.4"
wasm-bindgen-futures = "0.4.50"
wasm-bindgen = "0.2.105"
web-sys = "0.3.70"  
log = "0.4.27"
